--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
     },
     "devDependencies": {
         "grunt": "0.4.1",
-        "grunt-contrib-clean": "~0.4.0",
+        "grunt-contrib-clean": "0.4.0",
+        "grunt-contrib-concat": "0.2.0",
         "grunt-contrib-jshint": "git://github.com/litixsoft/grunt-contrib-jshint.git",
+        "grunt-contrib-uglify": "0.2.0",
         "grunt-contrib-watch": "0.3.1",
-        "grunt-jasmine-node": "git://github.com/litixsoft/grunt-jasmine-node.git",
-        "grunt-istanbul": "0.2.1"
+        "grunt-istanbul": "0.2.1",
+        "grunt-jasmine-node": "git://github.com/litixsoft/grunt-jasmine-node.git"
     },
     "dependencies": {
     }
