--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "lx-helpers",
     "description": "Litixsoft Javascript helper functions.",
-    "version": "0.3.0",
+    "version": "0.3.1",
     "homepage": "https://github.com/litixsoft/lx-helpers",
     "author": {
         "name": "Litixsoft GmbH",
@@ -63,6 +63,7 @@
         "grunt-contrib-concat": "~0.3.0",
         "grunt-contrib-jshint": "~0.7.2",
         "grunt-contrib-uglify": "~0.2.7",
+        "grunt-conventional-changelog": "1.0.0",
         "grunt-jasmine-node": "0.1.0",
         "grunt-open": "~0.2.2",
         "istanbul": "~0.1.46",
