--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "devDependencies": {
         "grunt": "0.4.2",
         "grunt-bg-shell": "~2.3.1",
+        "grunt-bump": "0.0.11",
         "grunt-contrib-clean": "~0.5.0",
         "grunt-contrib-compress": "~0.5.3",
         "grunt-contrib-concat": "~0.3.0",
