--- a/package.json
+++ b/package.json
@@ -3,35 +3,10 @@
     "description": "Litixsoft Javascript helper functions.",
     "version": "0.3.3",
     "homepage": "https://github.com/litixsoft/lx-helpers",
-    "author": {
-        "name": "Litixsoft GmbH",
-        "email": "info@litixsoft.de"
-    },
+    "author": "Litixsoft GmbH <info@litixsoft.de> (http://www.litixsoft.de)",
     "maintainers": [
-        {
-            "name": "Timo Liebetrau",
-            "email": "t.liebetrau@litixsoft.de"
-        },
-        {
-            "name": "Thomas Heinrich Linke",
-            "email": "t.heinrich-linke@litixsoft.de"
-        },
-        {
-            "name": "Marco Kannenberg",
-            "email": "m.kannenberg@litixsoft.de"
-        },
-        {
-            "name": "Andreas Krummsdorf",
-            "email": "a.krummsdorf@litixsoft.de"
-        },
-        {
-            "name": "Sven Bernstein",
-            "email": "s.bernstein@litixsoft.de"
-        },
-        {
-            "name": "Thomas Scheibe",
-            "email": "th.scheibe@litixsoft.de"
-        }
+        "Andreas Krummsdorf <a.krummsdorf@litixsoft.de>",
+        "Dominic Sachs <d.sachs@litixsoft.de>"
     ],
     "repository": {
         "type": "git",
@@ -43,15 +18,17 @@
     "keywords": [
         "iteration"
     ],
-    "license": "The MIT License (MIT)",
+    "license": "MIT",
     "licenses": [
         {
             "type": "MIT",
             "url": "https://github.com/litixsoft/lx-helpers/blob/master/LICENSE"
         }
     ],
-    "readmeFilename": "README.md",
     "main": "lib/lx-helpers.js",
+    "directories": {
+        "lib": "./lib"
+    },
     "scripts": {
         "test": "grunt test"
     },
@@ -67,7 +44,7 @@
         "grunt-conventional-changelog": "1.0.0",
         "grunt-jasmine-node": "0.1.0",
         "grunt-open": "~0.2.2",
-        "istanbul": "~0.2.0",
+        "istanbul": "~0.2.1",
         "load-grunt-tasks": "~0.2.1"
     },
     "dependencies": {
