--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,8 @@
 .git*
-build/
 .DS_Store
 .idea/
-atlassian-ide-plugin.xml
-test/
+.reports
 .travis.yml
+atlassian-ide-plugin.xml
 Gruntfile.js
+test/
